@@ -1,6 +1,8 @@
 NOCC 1.8.3  ???? ??, ????
 
   Bugs
+    * Bug #2836784 : imap_utf8() returns only capital letters since PHP 5.2.5
+      (Tim Gerundt)
     * Bug #2962990 : full_name preference not quoted in email send (Sean Skogen).
     * Bug #2987135 : Add second "Re:" by reply (Tim Gerundt).
     * Bug #2963603 : Function name tripos instead of stripos, typo? (openfan).
